--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.53.3",
+    "@wagmi/core": "^2.13.4",
     "@web3modal/wagmi": "^5.1.5",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
