--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.6",
     "@lexical/code": "^0.17.1",
+    "@lexical/file": "^0.17.1",
     "@lexical/link": "^0.17.1",
     "@lexical/list": "^0.17.1",
+    "@lexical/markdown": "^0.17.1",
     "@lexical/react": "^0.17.1",
     "@lexical/rich-text": "^0.17.1",
     "@lexical/selection": "^0.17.1",
@@ -43,6 +45,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.5.4",
     "geist": "^1.2.1",
     "lexical": "^0.17.1",
     "lodash-es": "^4.17.21",
@@ -59,11 +62,13 @@
     "wagmi": "^2.12.8"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@types/three": "^0.168.0",
     "postcss": "8.4.33",
+    "tailwind-mask": "link:@types/@lostisworld/tailwind-mask",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
