--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "gen:migration": "supabase db diff --use-migra -f"
+    "gen:migration": "supabase db diff --use-migra -f",
+    "gen:db:types:local": "supabase gen types typescript --local > database.types.ts"
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.6",
@@ -39,7 +40,8 @@
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/react-virtual": "^3.10.7",
     "@wagmi/core": "^2.13.4",
-    "@web3modal/wagmi": "^5.1.5",
+    "@web3modal/siwe": "^5.1.6",
+    "@web3modal/wagmi": "^5.1.6",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -50,7 +52,7 @@
     "lexical": "^0.17.1",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.436.0",
-    "next": "^14.2.7",
+    "next": "14.2.3",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "react": "18.2.0",
@@ -58,8 +60,8 @@
     "sonner": "^1.5.0",
     "three": "^0.168.0",
     "use-debounce": "^10.0.3",
-    "viem": "^2.21.1",
-    "wagmi": "^2.12.8"
+    "viem": "2.19.6",
+    "wagmi": "2.12.5"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
