--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "gen:migration": "supabase db diff --use-migra -f",
+    "gen:migration": "supabase db diff  -s public,storage --use-migra -f",
     "gen:db:types:local": "supabase gen types typescript --local > database.types.ts"
   },
   "dependencies": {
