--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
+    "seed": "supabase db reset && tsx seed-uploads.ts",
     "build": "next build",
     "start": "next start",
     "gen:migration": "supabase db diff  -s public,storage --use-migra -f",
     "gen:db:types:local": "supabase gen types typescript --local > database.types.ts"
   },
+  "type": "module",
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.6",
     "@lexical/code": "^0.17.1",
@@ -75,6 +77,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.1",
     "typescript": "5.3.3"
   }
 }
