--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "react": "18.2.0",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "18.2.0",
     "recharts": "2.13.0-alpha.5",
     "sonner": "^1.5.0",
@@ -69,6 +70,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
+    "@types/react-canvas-draw": "^1.2.3",
     "@types/react-dom": "18.2.18",
     "@types/three": "^0.168.0",
     "postcss": "8.4.33",
