--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "dotenv": "latest"
   }
 }
