--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-# .env*.local
+.env*.local
 .env
 
 # vercel
@@ -36,5 +36,3 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-
-.env.local
