--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "seed": "supabase db reset && tsx seed-uploads.ts",
     "build": "next build",
     "start": "next start",
@@ -46,6 +46,7 @@
     "@wagmi/core": "^2.13.4",
     "@web3modal/siwe": "^5.1.6",
     "@web3modal/wagmi": "^5.1.6",
+    "@xenova/transformers": "^2.17.2",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -68,7 +69,9 @@
     "three": "^0.168.0",
     "use-debounce": "^10.0.3",
     "viem": "2.19.6",
-    "wagmi": "2.12.5"
+    "wagmi": "2.12.5",
+    "sharp": "0.32.6",
+    "onnxruntime-node": "1.14.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
@@ -85,5 +88,10 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.1",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "sharp": "0.32.6",
+    "onnxruntime-node": "1.14.0",
+    "@xenova/transformers": "^2.4.2"
   }
 }
